binrw/tests/ui/invalid_magic_type.stderr
error: expected byte string, byte, char, float, or int
 --> $DIR/invalid_magic_type.rs:4:14
  |
4 | #[br(magic = "invalid_type")]
  |              ^^^^^^^^^^^^^^
