binrw/tests/ui/invalid_magic_type.rs
use binrw::BinRead;

#[derive(BinRead)]
#[br(magic = "invalid_type")]
struct Foo;

fn main() {}
